# Saturnis

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  saturnis_code_review (1).md  saturnis_code_review.md  saturnis_code_review_v2.md  saturnis_codex_batch_isa.md  saturnis_codex_batch_isa_rev2.md  trace8_sample.jsonl
docs/: README.md  Roadmap.md  architecture.md  archived_roadmap.md  bios_forward_progress.md  code_review.md  libbusarb_integration.md  mmio_endianness.md  phase_progress_todo.md  project_scope_rules.md  revised_roadmap_final.md  roadmap_goal_task_list.md  roadmap_ymir_tool.md  saturnis_roadmap_unified.md  saturnis_todo_revised.md  saturnis_todo_updated_v2.md  saturnis_todo_v3 (1).md  saturnis_todo_v3.md  sh2_microtest_conventions.md  sh2_roadmap.md  ssh2_plus1_investigation.md  todo.md  trace_format.md  trace_tick_semantics.md  ymir_integration_guide.md
docs/archive/: README.md  archived_roadmap.md  revised_roadmap_final.md  roadmap_goal_task_list.md  saturnis_roadmap_unified.md  todo.md
docs/replay_outputs/: drive_trace_summary.json  drive_trace_summary_v2.json  drive_trace_summary_v3.json  drive_trace_summary_v5.json  drive_trace_summary_v6.json  drive_trace_summary_v7.json  trace8_annotated.jsonl  trace8_summary.json
include/busarb/: busarb.hpp  ymir_timing.hpp
src/: main.cpp
src/bus/: bus_arbiter.cpp  bus_arbiter.hpp  bus_op.hpp
src/busarb/: busarb.cpp  ymir_timing.cpp
src/core/: emulator.cpp  emulator.hpp  time.cpp  time.hpp  trace.cpp  trace.hpp
src/cpu/: scripted_cpu.cpp  scripted_cpu.hpp  sh2_core.cpp  sh2_core.hpp  sh2_decode.cpp  sh2_decode.hpp
src/dev/: devices.cpp  devices.hpp
src/mem/: memory.cpp  memory.hpp
src/platform/: file_io.cpp  file_io.hpp  sdl_window.cpp  sdl_window.hpp
tests/: test_bios_metrics_scripts.py  test_busarb.cpp  test_busarb_link_harness.cpp  test_kernel.cpp  test_trace_regression.cpp  test_trace_replay_tool.py  test_ymir_timing.cpp
tests/fixtures/bios_metrics/: baseline_metrics.json  sample_trace.jsonl
tests/fixtures/trace_replay/: sample_trace.jsonl
tools/bios_metrics/: bios_metrics_lib.py  diff_bios_illegal_metrics.py  run_bios_illegal_metrics.py
tools/trace_replay/: trace_replay.cpp
